--- a/platformio.ini
+++ b/platformio.ini
@@ -4,6 +4,7 @@ board = esp32-s3-devkitc-1
 framework = arduino
 build_flags = 
     -DUSER_SETUP_LOADED=1
+    -DDISABLE_ALL_LIBRARY_WARNINGS=1 ; Чтобы не спамило ошибками
     -DST7789_DRIVER=1
     -DTFT_WIDTH=240
     -DTFT_HEIGHT=240
@@ -16,4 +17,3 @@ build_flags =
     -DTFT_INVERSION_ON=1
     -DARDUINO_USB_MODE=1
     -DARDUINO_USB_CDC_ON_BOOT=1
-	
